Commit after fixing footer and configuring readable theme

--- a/onlineshopping/src/main/webapp/assets/css/myapp.css
+++ b/onlineshopping/src/main/webapp/assets/css/myapp.css
@@ -1,10 +1,22 @@
 
-body {
-    padding-top: 54px;
+html{
+	height: 100%;
 }
+body {
+   
+    height: 100%;
+}
+
 
 @media (min-width: 992px) {
     body {
-        padding-top: 56px;
+      
+        height: 100%;
     }
 }
+footer{
+	margin: 0;
+}
+.wrapper{min-height: 100%;position: relative;}
+.content{padding-bottom:60px; }
+.footer{position: absolute; bottom: 0; height: 60px;}
